--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mantine/dropzone": "^6.0.8",
     "@mantine/hooks": "^6.0.8",
     "@mantine/nprogress": "^6.0.8",
+    "@tabler/icons-react": "^2.17.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
