--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@mantine/hooks": "^6.0.8",
     "@mantine/nprogress": "^6.0.8",
     "@tabler/icons-react": "^2.17.0",
+    "@tanstack/react-query": "^4.35.7",
+    "@tanstack/react-query-devtools": "^4.35.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
